# shpritz

./: CMakeLists.txt
src/: CMakeLists.txt  SpeedReader.cpp  SpeedReader.h  main.cpp
src/reader/: FileReader.cpp  FileReader.h  TxtReader.cpp  TxtReader.h
src/ui/: ReadingWindow.cpp  ReadingWindow.h
